--- a/src/api/app/views/webui/configuration/users.html.erb
+++ b/src/api/app/views/webui/configuration/users.html.erb
@@ -25,10 +25,12 @@
         <td class="nowrap">
           <a href="#" class="dropdown-menu" id="actions-trigger-<%= user.login.gsub(/[\.]/,'-') %>"><strong>Actions</strong></a>
           <ul class="dropdown-menu-content" style="z-index:1;" id="actions-trigger-<%= user.login.gsub(/[\.]/,'-') %>-content">
-              <li>
-                <%= sprite_tag('accessories-text-editor') %>
-                <%= link_to('Edit user', :controller => "user", :action => "edit", :user => user.login) %>
-              </li>
+              <% unless user.state == User.states['ldap'] %>
+                <li>
+                  <%= sprite_tag('accessories-text-editor') %>
+                  <%= link_to('Edit user', :controller => "user", :action => "edit", :user => user.login) %>
+                </li>
+              <% end %>
               <li>
                 <%= sprite_tag('accept') %>
                 <%= link_to('Confirm user', {:controller => "user", :action => "confirm", :user => user.login },
