--- a/src/api/app/views/webui/project/meta.html.erb
+++ b/src/api/app/views/webui/project/meta.html.erb
@@ -1,12 +1,26 @@
 <% @pagetitle = "Meta Configuration of #{@project}" %>
 <% @metarobots = 'noindex' %>
+<% @force_save ||= false %>
 <% project_bread_crumb('Meta') %>
 
 <%= render :partial => 'tabs' %>
 
-<h3><%= @pagetitle %></h3>
-<% if User.current.can_modify_project?(@project.api_obj) %>
-  <%= render partial: "shared/editor", locals: {text: @meta, mode: 'xml', save: {url: url_for(controller: 'project', action: 'save_meta'), method: 'POST', data: {project: @project.name, submit: 'meta'}}} %>
+<h3><%= @pagetitle %> <% if @rev %>(Revision <%= @rev %>)<% end %></h3>
+
+<% unless @spider_bot -%>
+  <p>
+  <% if @rev %>
+    <%= link_to(sprite_tag('brick'), :controller => :project, :action => :meta, :project => @project, :rev => @rev, :revert => 1) %>
+    <%= link_to("Load Revision #{@rev} into the editor", :controller => :project, :action => :meta, :project => @project, :rev => @rev, :revert => 1) %>
+  <% else %>
+    <%= link_to(sprite_tag('brick'), :controller => :project, :action => :revisions, :meta => 1) %>
+    <%= link_to('Show Revisions', :controller => :project, :action => :revisions, :meta => 1) %>
+  <% end %>
+  </p>
+<% end %>
+
+<% if User.current.can_modify_project?(@project.api_obj) && !@rev %>
+  <%= render partial: "shared/editor", locals: {text: @meta, mode: 'xml', save: {url: url_for(controller: 'project', action: 'save_meta'), method: 'POST', data: {project: @project.name, submit: 'meta', rev: @rev}}, force_save: @force_save} %>
 <% else %>
-  <%= render partial: "shared/editor", locals: {text: @meta, mode: 'xml'} %>
+  <%= render partial: "shared/editor", locals: {text: @meta, mode: 'xml', read_only: true} %>
 <% end %>
