--- a/src/api/app/views/webui/package/_files_view.html.erb
+++ b/src/api/app/views/webui/package/_files_view.html.erb
@@ -61,6 +61,6 @@
         <h3>Latest Revision</h3>
     <% end %>
     <div style="margin-left: 1.2em">
-      <%= render :partial => 'commit_item', :locals => {:rev => @revision} %>
+      <%= render :partial => 'commit_item', :locals => {:rev => @revision, :meta => '0' } %>
     </div>
 <% end %>
