--- a/src/api/app/views/webui/package/meta.html.erb
+++ b/src/api/app/views/webui/package/meta.html.erb
@@ -1,11 +1,26 @@
 <% @pagetitle = "Meta Configuration of Package #{@package}" %>
+<% @force_save ||= false %>
 <% package_bread_crumb('Meta') %>
 
 <%= render :partial => 'tabs' %>
 
-<h3><%= @pagetitle %></h3>
-<% if User.current.can_modify_package? @package %>
-  <%= render partial: "shared/editor", locals: {text: @meta, mode: 'xml', save: {url: url_for(controller: 'package', action: 'save_meta'), method: 'POST', data: {project: @project.name, package: @package.name, submit: 'meta'}}} %>
+<h3><%= @pagetitle %> <% if @rev %>(Revision <%= @rev %>)<% end %></h3>
+
+<% unless @spider_bot -%>
+  <p>
+  <% if User.current.can_modify_package?(@package) && @rev %>
+    <%= link_to(sprite_tag('brick'), :controller => :package, :action => :meta, :project => @project, :package => @package.name, :rev => @rev, :revert => 1) %>
+    <%= link_to("Load Revision #{@rev} into the editor", :controller => :package, :action => :meta, :project => @project,  :package => @package.name, :rev => @rev, :revert => 1) %>
+  <% else %>
+    <%= link_to(sprite_tag('brick'), :controller => :package, :action => :revisions, :meta => 1) %>
+    <%= link_to('Show Revisions', :controller => :package, :action => :revisions, :meta => 1) %>
+  <% end %>
+  </p>
+<% end %>
+
+
+<% if User.current.can_modify_package?(@package) && !@rev%>
+  <%= render partial: "shared/editor", locals: {text: @meta, mode: 'xml', save: {url: url_for(controller: 'package', action: 'save_meta'), method: 'POST', data: {project: @project.name, package: @package.name, submit: 'meta', rev: @rev}}, force_save: @force_save} %>
 <% else %>
   <%= render partial: "shared/editor", locals: {text: @meta, mode: 'xml', read_only: true} %>
 <% end %>
