--- a/src/api/app/views/webui/project/revisions.html.erb
+++ b/src/api/app/views/webui/project/revisions.html.erb
@@ -13,7 +13,7 @@
     <% end %>
   </div>
   <% unless params[:showall] %>
-    <p><%= link_to('Show all', :action  => 'revisions', :project => @project, :showall => 1) %></p>
+    <p><%= link_to('Show all', :action  => 'revisions', :project => @project, :meta => params[:meta], :showall => 1) %></p>
   <% end %>
 <% else %>
   <h3><%= @pagetitle %></h3>
